--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700');
-body {
+html, body {
+  border: 0;
+  margin: 0;
   font-family: 'Roboto', sans-serif;
   background-color: #fff;
   text-align: center;
